--- a/src/app/styles/helpers/_animations.scss
+++ b/src/app/styles/helpers/_animations.scss
@@ -73,3 +73,15 @@
 		opacity: 0;
 	}
 }
+
+@keyframes gradientShift {
+	0% {
+	  background-position: 0% 50%;
+	}
+	50% {
+	  background-position: 100% 50%;
+	}
+	100% {
+	  background-position: 0% 50%;
+	}
+  }
