--- a/src/shared/ui/ActorCard/ui/style.module.scss
+++ b/src/shared/ui/ActorCard/ui/style.module.scss
@@ -1,82 +1,63 @@
 @use '@/app/styles/helpers' as *;
 
-.card {
-    width: rem(150);
+.actor-card {
+    width: 100%;
     position: relative;
     display: flex;
     flex-direction: column;
     align-items: center;
-    overflow: hidden;
-    row-gap: rem(5);
-    padding-bottom: rem(5);
-    border-radius: var(--border-radius-m);
     transition: border-color 0.2s;
     @include hover {
-        .actions {
+        &__actions {
             opacity: 1;
             pointer-events: all;
         }
     }
     &:focus-within {
-        color: red;
-        .actions {
+        &__actions {
             opacity: 1;
             pointer-events: all;
         }
     }
-    &.full-width {
+    &__description {
+        margin-top: rem(-25);
+        background-color: var(--theme-color-dark);
+        display: flex;
+        flex-direction: column;
         width: 100%;
+        text-align: center;
+        padding-block: rem(5);
+        z-index: 1;
     }
-}
-
-.photo {
-    width: 100%;
-    aspect-ratio: 1;
-    font-size: calc(rem(150) / 1.75);
-}
-
-.description {
-    display: flex;
-    flex-direction: column;
-    width: 100%;
-    text-align: center;
-    padding-inline: rem(5);
-}
-
-.birth-date {
-    display: flex;
-    align-items: center;
-    column-gap: rem(5);
-}
-
-.actions {
-    position: absolute;
-    top: rem(5);
-    right: rem(5);
-    display: flex;
-    flex-direction: column;
-    opacity: 0;
-    pointer-events: none;
-    transition: opacity 0.2s;
-    background-color: var(--theme-color-grey-dark);
-    border-radius: var(--border-radius-s);
-    padding: rem(2);
-}
-
-.skeleton {
-    display: flex;
-    flex-direction: column;
-    row-gap: rem(5);
-    width: rem(150);
-    &.full-width {
+    &__badge {
         width: 100%;
     }
     &__photo {
         width: 100%;
         aspect-ratio: 1;
+        font-size: calc(rem(150) / 1.75);
     }
-    &__desc {
-        width: 100%;
-        height: rem(75);
+    &__actions {
+        position: absolute;
+        top: rem(5);
+        right: rem(5);
+        display: flex;
+        flex-direction: column;
+        opacity: 0;
+        pointer-events: none;
+        transition: opacity 0.2s;
+        background-color: var(--theme-color-grey-dark);
+        border-radius: var(--border-radius-s);
+        padding: rem(2);
+    }
+}
+
+.skeleton {
+    &__description {
+        row-gap: rem(10);
+        height: rem(58);
+    }
+    &__text {
+        height: var(--font-size-s); 
     }
 }
