--- a/src/app/styles/themes/_dark.scss
+++ b/src/app/styles/themes/_dark.scss
@@ -6,6 +6,8 @@
 	--theme-color-dark: var(--color-dark);
 	--theme-color-light: var(--color-light);
 
+	--box-shadow-paper: 0 0 10px 1px rgba(0, 0, 0, 0.3);
+
     // Grey
 	--theme-color-grey-dark: var(--color-grey-900);
 	--theme-color-grey-light: var(--color-grey-800);
