--- a/src/features/Confirmation/ui/ConfirmationDialogs/BaseConfirmationDialog/style.module.scss
+++ b/src/features/Confirmation/ui/ConfirmationDialogs/BaseConfirmationDialog/style.module.scss
@@ -1,8 +1,8 @@
 @use '@/app/styles/helpers' as *;
 
 .dialog {
-    --padding: #{rem(20)};
-    max-width: calc(var(--padding) * 2 + rem(320));
+    --padding: var(--padding-20);
+    max-width: calc(var(--button-height-s) * 6 + rem(10) * 5 + var(--padding) * 2);
     width: 100%;
     @include max-width(420) {
         --padding: #{rem(15)};
@@ -17,7 +17,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    row-gap: rem(20);
+    row-gap: var(--padding);
 }
 
 .send-code-section {
