--- a/src/app/styles/themes/_light.scss
+++ b/src/app/styles/themes/_light.scss
@@ -6,6 +6,7 @@
     --theme-color-dark: var(--color-light);
     --theme-color-light: var(--color-dark);
 
+    --box-shadow-paper: 0 0 10px 1px rgba(92, 91, 91, 0.3);
     // Grey
     --theme-color-grey-dark: var(--color-grey-100);
     --theme-color-grey-light: var(--color-grey-300);
