--- a/src/features/AdminPanel/AdminPanelSideBar/ui/MobileAdminPanelSideBar/style.module.scss
+++ b/src/features/AdminPanel/AdminPanelSideBar/ui/MobileAdminPanelSideBar/style.module.scss
@@ -5,7 +5,7 @@
     display: flex;
     padding: var(--padding-20);
     padding-top: calc(var(--header-height) * 1.5);
-    @include max-width(400) {
+    @include mobile-s {
         width: 100%;
     }
 }
@@ -19,6 +19,9 @@
     display: flex;
     flex-direction: column;
     row-gap: rem(5);
+    a {
+        justify-content: center;
+    }
 }
 
 .trigger-button {
