--- a/src/features/Confirmation/ui/ConfirmationForm/style.module.scss
+++ b/src/features/Confirmation/ui/ConfirmationForm/style.module.scss
@@ -4,7 +4,7 @@
     width: 100%;
     display: flex;
     flex-direction: column;
-    row-gap: rem(20);
+    row-gap: var(--padding-20);
     @include max-width(420) {
         row-gap: rem(10);
     }
