--- a/src/features/MovieCatalog/ui/FilterPanel/MobileCatalogFilterPanel/style.module.scss
+++ b/src/features/MovieCatalog/ui/FilterPanel/MobileCatalogFilterPanel/style.module.scss
@@ -13,7 +13,7 @@
     row-gap: var(--padding-20);
     display: flex;
     flex-direction: column;
-    @include max-width(550) {
+    @include mobile-s {
         width: 100%;
     }
     &__reset-button {
