add icon for user menu

--- a/src/widgets/UserMenu/ui/style.module.scss
+++ b/src/widgets/UserMenu/ui/style.module.scss
@@ -35,7 +35,7 @@
             transform: rotate(180deg);
         }
     }
-    &__avatar {
+    &__icon {
         height: 100%;
         width: var(--height);
         font-size: calc(var(--height) / 1.75);
