fix-user-menu-bg-color

--- a/src/widgets/UserMenu/ui/style.module.scss
+++ b/src/widgets/UserMenu/ui/style.module.scss
@@ -44,7 +44,7 @@
         justify-content: center;
         align-items: center;
         border-radius: var(--border-radius-m);
-        background-color: var(--color-grey-500);
+        border: var(--border-weight-soft) solid var(--border-color-grey);
     }
 }
 
