--- a/src/shared/ui/MovieCard/ui/style.module.scss
+++ b/src/shared/ui/MovieCard/ui/style.module.scss
@@ -42,6 +42,7 @@
     width: 100%;
     height: auto;
     aspect-ratio: 9 / 14;
+    font-size: rem(40);
     img {
         transition: transform 0.4s;
     } 
