fix centering pagination cursor

--- a/src/app/styles/_utils.scss
+++ b/src/app/styles/_utils.scss
@@ -39,6 +39,7 @@
 
 .text-button {
 	width: max-content;
+	height: max-content;
 	color: var(--font-color-soft);
 	background-color: transparent;
 	border: none;
