--- a/src/features/Reviews/ui/ReviewsFormMovie/CommentList/style.module.scss
+++ b/src/features/Reviews/ui/ReviewsFormMovie/CommentList/style.module.scss
@@ -27,6 +27,7 @@
 	margin-top: calc(var(--padding-20) * -1);
 	display: flex;
 	justify-content: center;
+	align-items: center;
 	column-gap: rem(5);
 	color: var(--font-color-soft);
 	opacity: 0;
