fix pagination button height in mobile

--- a/src/features/Reviews/ui/ReviewsFormMovie/CommentList/style.module.scss
+++ b/src/features/Reviews/ui/ReviewsFormMovie/CommentList/style.module.scss
@@ -43,5 +43,11 @@
 			display: none;
 		}
 	}
+	@include mobile {
+		margin-top: 0px;
+		&__pagination-button {
+			height: max-content;
+		}
+	}
 }
 
