--- a/src/features/AdminPanel/Movies/ui/MovieForm/style.module.scss
+++ b/src/features/AdminPanel/Movies/ui/MovieForm/style.module.scss
@@ -40,9 +40,12 @@
     &__tabs {
         display: flex;
         column-gap: rem(10);
-        overflow-x: hidden;
         button {
             width: 100%;
+        }
+        @include mobile-s {
+            flex-direction: column;
+            row-gap: rem(10);
         }
     }
 }
