--- a/src/app/styles/_utils.scss
+++ b/src/app/styles/_utils.scss
@@ -17,6 +17,9 @@
 	padding-top: calc(var(--header-height) * 1.5);
 	padding-bottom: var(--header-height);
 	padding-right: 16px;
+	@include mobile {
+		padding-right: 4px;
+	}
 }
 
 .section {
