--- a/src/shared/ui/MovieCard/ui/style.module.scss
+++ b/src/shared/ui/MovieCard/ui/style.module.scss
@@ -19,6 +19,8 @@
         bottom: 0;
         height: 50%;
         width: 100%;
+        border-bottom-left-radius: var(--border-radius-m);
+        border-bottom-right-radius: var(--border-radius-m);
         background: linear-gradient(
             to top,
             var(--theme-color-dark) 0%,
