--- a/src/shared/ui/ActorCard/ui/style.module.scss
+++ b/src/shared/ui/ActorCard/ui/style.module.scss
@@ -7,18 +7,6 @@
     flex-direction: column;
     align-items: center;
     transition: border-color 0.2s;
-    @include hover {
-        .actor-card__actions {
-            opacity: 1;
-            pointer-events: all;
-        }
-    }
-    &:focus-within {
-        .actor-card__actions {
-            opacity: 1;
-            pointer-events: all;
-        } 
-    }
     &__description {
         margin-top: rem(-25);
         background-color: var(--theme-color-dark);
@@ -45,11 +33,8 @@
         transform: translateX(-50%) translateY(-100%);
         display: flex;
         transition: opacity 0.2s;
-        background-color: var(--theme-color-grey-dark);
+        background-color: var(--color-dark-opacity-hard);
         border-radius: var(--border-radius-s);
-        padding: rem(2);
-        opacity: 0;
-        pointer-events: none;
     }
 }
 
