--- a/src/widgets/Header/ui/style.module.scss
+++ b/src/widgets/Header/ui/style.module.scss
@@ -3,6 +3,7 @@
 .header {
     position: fixed;
     width: 100vw;
+    //width: 100%;
     background-color: var(--theme-color-grey-dark);
     z-index: 100;
     padding-right: 16px;
