fix main title, change height in pagination button

--- a/src/shared/ui/PaginationCursor/ui/style.module.scss
+++ b/src/shared/ui/PaginationCursor/ui/style.module.scss
@@ -4,5 +4,5 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    height: rem(60);
+    padding-block: var(--padding-20);
 }
