--- a/src/features/Reviews/ui/ReviewsFormMovie/CommentList/style.module.scss
+++ b/src/features/Reviews/ui/ReviewsFormMovie/CommentList/style.module.scss
@@ -17,7 +17,7 @@
 }
 
 .no-comments-label {
-	height: rem(60);
+	padding-block: var(--padding-20);
 	display: flex;
 	align-items: center;
 	justify-content: center;
