fix pagiatnion button height in comment list

--- a/src/features/Reviews/ui/ReviewsFormMovie/CommentList/style.module.scss
+++ b/src/features/Reviews/ui/ReviewsFormMovie/CommentList/style.module.scss
@@ -47,7 +47,7 @@
 		}
 		&__pagination-button {
 			height: max-content;
-			margin-left: 0px;
+			padding-block: 0px;
 		}
 		&__close-button {
 			margin-bottom: var(--padding-20);
